# JUCE

./: .gitignore  APT-FILTER-COMPLETE.md  APT-FILTER.md  CMakeLists.txt  CURRENT-STATUS.md  FEATURES.md  PLUGIN-STATUS.md  TESTING-GUIDE.md  build-all-plugins.sh
Source/: FrequencyResponseGraph.cpp  FrequencyResponseGraph.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
apt-chorus/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
apt-drive/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
apt-punch/: CMakeLists.txt  CustomLookAndFeel.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
apt-tilt/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
apt-tool/: CMakeLists.txt  CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
apt-wide/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
memory-bank/: APT-SUITE-COMPLETE.md  APT-SUITE-ROADMAP.md  APT-SUITE-VISION.md  activeContext.md  enhancementIdeas.md  nextSteps.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
